Changed button styles

--- a/src/scss/components/_pomodoroTimer.scss
+++ b/src/scss/components/_pomodoroTimer.scss
@@ -40,25 +40,30 @@
         .timer-next {
             background: none;
             padding: 10px 20px;
-            border: none;
+            border: 2px solid transparent;
             cursor: pointer;
             font-family: "Roboto", sans-serif;
             border-radius: 3px;
             font-size: 1rem;
-            transition: background 0.1s ease-out;
+            transition: all 0.1s ease-out;
         }
 
         .timer-pause {
-            background: $primary;
+            background: white;
+            border: 2px solid white;
             margin-right: 10px;
 
             &:hover {
-                background: lighten($primary, 4%);
+                box-shadow: 0 2px 20px rgba($color: #000000, $alpha: 0.09);
             }
         }
 
-        .timer-next:hover {
-            background: $primary;
+        .timer-next {
+            border: 2px solid white;
+
+            &:hover {
+                background: white;
+            }
         }
     }
 }
