--- a/src/scss/components/_pomodoroTimer.scss
+++ b/src/scss/components/_pomodoroTimer.scss
@@ -65,12 +65,22 @@
         .timer-row {
             display: flex;
             flex-direction: row;
+            margin-bottom: 15px;
+            align-items: center;
             
             label {
                 flex-basis: 50%;
                 text-align: right;
                 margin-right: 15px;
             }
+        }
+
+        input[type="number"] {
+            background: transparent;
+            font-size: 1rem;
+            border: 1px solid white;
+            width: 50px;
+            padding: 5px;
         }
     }
 
